--- a/programa.cbp
+++ b/programa.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="adddelay.h" />
+		<Unit filename="enigmas.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="enigmas.h" />
 		<Unit filename="juegouno.c">
 			<Option compilerVar="CC" />
 		</Unit>
